test/MC/SVE/regression-tests/negative_tests/sve-cpy-034.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS64DupIZ
// Immediate not compatible with encode/decode function.
cpy z0.d, p5/z, #-129
// CHECK: error: immediate must be an integer in range [-128, 127] or a multiple of 256 in range [-32768, 32512]
